Revert "Add the option to filter by host when retrieving of unregistered VMs (#9925)"
This reverts commit aa6c581e405d7652916a9290e042f0bd26c3913a.